--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -10,10 +10,10 @@
 // Any additional imported files //
 @import "theme/child_theme";  // <--------- Add your styles into this file
 @import "../css/reset.css";
-@import "ajy/_vars.scss";
-@import "ajy/_header.scss";
-@import "ajy/_footer.scss";
-@import "ajy/_index.scss";
-@import "ajy/_blog.scss";
-@import "ajy/_post.scss";
-@import "ajy/_aside.scss";
+@import "exam/_vars.scss";
+@import "exam/_header.scss";
+@import "exam/_footer.scss";
+@import "exam/_index.scss";
+@import "exam/_blog.scss";
+@import "exam/_post.scss";
+@import "exam/_aside.scss";
