--- a/wp-content/themes/understrap-child/css/child-theme.css
+++ b/wp-content/themes/understrap-child/css/child-theme.css
@@ -9669,7 +9669,7 @@ a.skip-link {
 
 .toggler {
   width: 500px;
-  height: 200px;
+  /*height: 200px; */
   position: relative; }
 
 #button {
@@ -9678,7 +9678,7 @@ a.skip-link {
 
 #effect {
   width: 240px;
-  height: 170px;
+  /*height: 170px;*/
   padding: 0.4em;
   position: relative;
   background: #fff; }
